--- a/index.css
+++ b/index.css
@@ -38,14 +38,6 @@ header .title {
 
 
 
-
-
-
-
-
-
-
-
 main {
     display: flex;
     flex-direction: column;
@@ -95,17 +87,9 @@ td:first-child {
 
 
 
-
-
 small {
     color: var(--purple-light);
 }
-
-
-
-
-
-
 
 
 h2 {
@@ -127,12 +111,6 @@ td {
 }
 
 
-
-
-
-
-
-
 @media (hover: hover) {
     .free:hover {
         background: var(--glass);
@@ -140,20 +118,18 @@ td {
 }
 
 
-
-/* 🔹 Подпись недель — голубой фон */
 th[colspan] {
     background: var(--glass);
 }
 
 
-/* 🔹 Левая колонка с временем */
+
 td:first-child {
     font-weight: bold;
     width: 70px;
 }
 
-/* Остальные колонки (дни) */
+
 th:not(:first-child),
 td:not(:first-child) {
     width: 106px;
@@ -180,7 +156,7 @@ strong {
 
 footer {
     width: 3374px;
-    padding: 20px 0;
+    padding: 10px 0;
     text-align: center;
     color: var(--purple-light);
     border-top: var(--border);
@@ -191,41 +167,39 @@ footer {
 
 
 
-
-
-
-
-
-
-
 @media (max-width: 768px) {
-   header {
-    background: var(--purple-light);
-   }
+    header {
+        background: var(--purple-light);
+        width: 3324px;
+    }
+
     header .header {
         margin: 0;
         padding: 10px 60px;
     }
-main {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px;
-    width: max-content;
-   
-}
 
-.calendar {
-    background: var(--white);
-    border-radius: 50px;
-    padding: 20px;
-    border: var(--border);
-    box-shadow: var(--shadow);
-    width: 100%;
-    display: flex;
-    gap: 15px;
-    flex-direction: column;
-}
+    main {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px;
+        width: max-content;
 
-}
+    }
 
+    .calendar {
+        background: var(--white);
+        border-radius: 50px;
+        padding: 20px;
+        border: var(--border);
+        box-shadow: var(--shadow);
+        width: 100%;
+        display: flex;
+        gap: 15px;
+        flex-direction: column;
+    }
+
+    footer {
+        width: 3324px;
+    }
+}
